Fix spacing and unit tests

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -8,13 +8,11 @@ img.brand {
     -webkit-border-radius: 0;
     -moz-border-radius: 0;
     border-radius: 0;
-
-    margin: 0 0 0 0;
-
+    margin: 0 0 50px 0;
 }
 
 .navbar-btn {
-// Separates the Log In and Sign Up buttons
+    // Separates the Log In and Sign Up buttons
     margin-left: 10px;
     margin-right: 10px;
 }
